--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   # my-app:
-  # image: ${docker-registry}/my-app:1.0
+  # image: mydock15/my-app:1.0
   # ports:
   # - 3000:3000
   mongodb:
